Proper high speeds achieved. Comp tag v0.4

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:text="Last update 40kbsp"
             android:gravity="center"
-            android:textColor="@color/whitegrey"
+            style="@style/ImageOverlayText"
             android:layout_alignParentBottom="true"
             android:paddingBottom="10dp"/>
 
@@ -90,12 +90,6 @@
             android:layout_weight="1"
             android:text="Start Stream" />
 
-        <Button
-            android:id="@+id/buttonResolution"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="320x240" />
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -163,7 +157,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="251 bytes" />
+            android:text="-" />
 
         <TextView
             android:id="@+id/textViewCI"
@@ -171,7 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="50ms" />
+            android:text="-" />
 
     </LinearLayout>
 
