--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -41,4 +41,15 @@
     	<item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="ImageOverlayText">
+        <item name="android:paddingLeft">4px</item>
+        <item name="android:paddingBottom">4px</item>
+        <item name="android:textColor">#ffffffff</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
 </resources>
